# gs_renderer

./: CMakeLists.txt  LICENSE  README.md
data/shaders/: gs_basis.wgsl  gs_covariance.wgsl  gs_render.wgsl  gs_scan.wgsl  gs_scan_sum.wgsl  gs_shuffle.wgsl
src/: main.cpp
src/engine/: gs_engine.cpp  gs_engine.h
src/framework/nodes/: gs_node.cpp  gs_node.h
src/framework/parsers/: parse_ply.cpp
src/graphics/: gs_renderer.cpp  gs_renderer.h
